.gitignore and no initialization.

--- a/project/build.properties
+++ b/project/build.properties
@@ -5,4 +5,4 @@ project.name=Mondrian Clustering
 sbt.version=0.7.4
 project.version=0.1
 build.scala.versions=2.8.0.RC2
-project.initialize=true
+project.initialize=false
